--- a/index.html
+++ b/index.html
@@ -6,42 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>최신자바스크립트 기술</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
-    <style>
-        body {
-            background-color: #d3d3d3;
-            /* 밝은 회색 배경 */
-        }
-
-        .terminal {
-            background-color: black;
-            padding: 20px;
-            border-radius: 10px;
-            margin: 50px auto;
-            max-width: 800px;
-            position: relative;
-        }
-
-        pre {
-            color: white;
-            font-family: "Courier New", Courier, monospace;
-        }
-
-        .cursor {
-            background-color: yellow;
-            width: 10px;
-            height: 20px;
-            left: 0;
-            display: inline-block;
-            vertical-align: bottom;
-            animation: blink 1s step-start infinite;
-        }
-
-        @keyframes blink {
-            50% {
-                background-color: black;
-            }
-        }
-    </style>
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
